<resources>
    <string name="app_name">Eatalyze</string>
    <string name="base_url">http://ec2-52-57-126-127.eu-central-1.compute.amazonaws.com:8080/</string>

    <!--Login-->
    <string name="app_title_name"><b>EATALYZE</b></string>
    <string name="mail_hint">E-Mail Address</string>
    <string name="pswd">Password</string>
    <string name="lgn_btn">LOGIN</string>
    <string name="signup"><u>Click here to signup!</u></string>
    <string name="forgot_password"><u>Forgot your password?</u></string>

    <!--Signup-->
    <string name="full_name">Fullname</string>
    <string name="secret_question">Secret Question</string>
    <string name="secret_answer">Secret Answer</string>
    <string name="signup_button">Signup</string>

    <!--User Profile Page-->
    <string name="followers">Followers:</string>
    <string name="following">Following:</string>
    <string name="follow_btn">Follow</string>
    <string name="image_view_content">Profile Photo</string>

    <!--Homepage-->
    <string name="rec_meal">Recommended Meals</string>
    <string name="rec_server">Recommended Food Servers</string>
    <string name="hello_name">Hello, </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">Search..</string>

    <!--User Profile Page-->
    <string name="logout">Logout</string>

    <!--Diet Page-->
    <string name="vegeterian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="gluten">Gluten Intolerant</string>
    <string name="celliac">Celliac Disease</string>
    <string name="lactose">Lactose Intolerant</string>
    <string name="paleo">Paleo</string>
    <string name="no_nuts">No Nuts</string>

    <string name="save_btn">Save</string>
    <string name="Profil_Page">UserName</string>

    <!--AddMealPage-->
    <string name="ingredients"><b>Ingredients</b></string>
    <string-array name="amount">
        <item>Grams</item>
        <item>Spoon</item>
        <item>Glass</item>
        <item>Piece</item>
    </string-array>

    <!--View meal page-->
    <string name="send_btn">Send</string>
    <string name="check_eat">Check Eat</string>
    <string name="searchable">Search..</string>
    <string name="Settings">Settings</string>

    <!--Advanced Search-->

    <string-array name="diet_types_array">
        <item>All</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Gluten Intolerant</item>
        <item>Celliac Disease</item>
        <item>Lactose Intolerant</item>
        <item>Paleo</item>
        <item>No Nuts</item>
    </string-array>

    <string-array name="amount_array">
        <item>gr</item>
        <item>spoon</item>
        <item>glass</item>
        <item>piece</item>
    </string-array>


    <!--Edit Preferences Page-->
    <string name="includes"><b>INCLUDES</b></string>
    <string name="excludes"><b>EXCLUDES</b></string>
</resources>
