<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground">

    <include layout="@layout/app_bar"/>

    <TextView
        android:id="@+id/hello_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/hello_name"/>

    <TextView
        android:id="@+id/tv_recommendedmeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/rec_meal"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/rec_meal_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_recommendedserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/rec_server"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/rec_server_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </RelativeLayout>


</LinearLayout>