<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pageBackground">

        <include layout="@layout/app_bar"/>

        <LinearLayout
            android:id="@+id/rl_vegeterian"
            android:layout_width="wrap_content"
            android:layout_height="30dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_vegeterian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tv_vegeterian"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/cb_vegeterian"
                android:text="@string/vegeterian"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_vegan"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/rl_vegeterian">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tv_vegan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/cb_vegan"
                android:text="@string/vegan"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_gluten"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/rl_vegan">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_gluten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tv_gluten"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/cb_gluten"
                android:text="@string/gluten"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_celliac"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/rl_gluten">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_celliac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tv_celliac"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/cb_celliac"
                android:text="@string/celliac"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_lactose"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/rl_celliac">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_lactose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tv_lactose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/cb_lactose"
                android:text="@string/lactose"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_paleo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/rl_lactose">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_paleo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tv_paleo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/cb_paleo"
                android:text="@string/paleo"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rl_paleo"
            android:text="@string/save_btn"
            android:textColor="@color/pageBackground"
            android:background="@drawable/login_btn"
            />

    </LinearLayout>
</ScrollView>