<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/id_big_layout"
    android:weightSum="10">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:baselineAligned="false"
        android:id="@+id/id_top_layout"
        android:padding="10dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/image_view_content"
                android:layout_weight="0.65"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/id_profile_photo"
                />
            <View
                android:clickable="true"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <Button
                android:text="@string/follow_btn"
                android:background="@drawable/follow_button_shape"
                android:layout_weight="0.25"
                android:padding="15dp"
                android:textColor="#4FC3F7"
                android:layout_width="match_parent"
                android:id="@+id/id_follow_button"
                android:layout_height="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/id_users_name"
                android:layout_width="183dp"
                android:layout_height="0dp"
                android:text="@string/users_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_weight="0.17"
                />
            <View
                android:clickable="true"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/id_followers"
                android:text="@string/followers"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_weight="0.15"
                android:clickable="true" />
            <View
                android:clickable="true"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="16sp"
                android:id="@+id/id_following"
                android:text="@string/following"
                android:clickable="true" />
            <View
                android:clickable="true"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="0.38"
                android:layout_height="0dp"
                android:id="@+id/id_bio"
                android:background="#E0E0E0" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/id_bottom_layout"
        android:layout_weight="4"
        android:padding="10dp"
        android:weightSum="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ScrollView>

    </LinearLayout>



</LinearLayout>